# zapp

./: .gitignore  Cargo.toml  LICENSE.md  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: release.yml
nix/: module.nix  overlay.nix  package.nix
nix/module/: README.md  common.nix
nix/module/darwin/: default.nix
nix/module/nixos/: default.nix
zapp/: Cargo.toml
zapp-core/: Cargo.toml
zapp-core/src/: error.rs  lib.rs
zapp-core/src/device/: ids.rs  mod.rs  watcher.rs
zapp-core/src/firmware/: dfu_bin.rs  ihex.rs  mod.rs
zapp-core/src/flash/: dfu.rs  halfkay.rs  mod.rs
zapp-oryx/: Cargo.toml
zapp-oryx/src/: lib.rs
zapp/src/: main.rs
