[package]
name = "zapp-oryx"
version = "0.1.0"
edition = "2024"

[dependencies]
zapp-core = { path = "../zapp-core" }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
