[package]
name = "zapp"
version = "1.0.0"
edition = "2024"

[dependencies]
zapp-core = { path = "../zapp-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
